Jucie-shop-deployment/juice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juice-shop
  name: juice-shop-service
  namespace: default
spec:
  selector:
    app: juice-shop
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
