Jucie-shop-deployment/juice-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mydomain.com
    http:
      paths:
      - backend:
          service:
            name: juice-shop-service
            port:
              number: 8080
        path: /v1
        pathType: Prefix
